<resources>
    <string name="app_name">Pedometer3</string>
    <string name="X">X加速度:</string>
    <string name="Y">Y加速度:</string>
    <string name="Z">Z加速度:</string>
    <string name="A">合加速度:</string>
    <string name="step">步数:</string>
    <string name="write">开始写入</string>
    <string name="stopWrite">停止写入</string>
    <string name="start">开始计步</string>
    <string name="pause">暂停计步</string>
    <string name="reset">复位</string>
</resources>
